# bevy_jam_side_effect

./: Cargo.toml  README.md  index.html
.github/workflows/: bump-version.yaml  release.yaml
assets/: Laser Lvl 1.aseprite  destructive-beam.aseprite  enemy.aseprite  ground-tiles.aseprite  level.ldtk  light speed.aseprite  mood.aseprite  organism-yellow.aseprite  organism.aseprite  pallete.aseprite  resources.aseprite
src/: aggro.rs  animation.rs  audio.rs  beams.rs  camera.rs  cursor.rs  damage.rs  level.rs  main.rs  movement.rs  ui.rs
