[package]
name = "bevy-jam-3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
bevy-inspector-egui = "0.18.3"
bevy_ecs_ldtk = { version = "0.6.0", features = ["atlas"] }
bevy_rapier2d = { version = "0.21.0", features = ["enhanced-determinism", "wasm-bindgen", "debug-render-2d"] }
