[package]
name = "bevy-jam-3"
version = "0.1.0"
edition = "2021"

[features]
debug-mode = []

[dependencies]
bevy = "0.10.1"
bevy-inspector-egui = "0.18.3"
bevy_ecs_ldtk = { version = "0.6.0", features = ["atlas"] }
bevy_rapier2d = { version = "0.21.0", features = ["enhanced-determinism", "wasm-bindgen", "debug-render-2d"] }

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3